# HammingArchivator

./: .gitignore  CMakeLists.txt  README.md
lib/: Append.cpp  CMakeLists.txt  Correction.cpp  Create.cpp  Delete.cpp  Extract.cpp  Hamming,Read,Write.cpp  List.cpp  Merge.cpp  Queue.h  archiver.h
src/: CMakeLists.txt  main.cpp
src/Archivator/: ArchiveHeader.cpp  ArchiveHeader.h  ArchiveHeaderFactory.h  ArchiveHeaderFactoryFromArchive.cpp  ArchiveHeaderFactoryFromArchive.h  Converter.cpp  Converter.h  ThreeBitsCoder.h
src/Builders/: CommandBuilder.hpp  CommandWithFileNameBuilder.h  ConcatenateCommandBuilder.cpp  ConcatenateCommandBuilder.h  CreateCommandBuilder.cpp  CreateCommandBuilder.h  ListCommandBuilder.cpp  ListCommandBuilder.h
src/Coder/: Coder.h  Converter.cpp  Converter.h  HammingCoder.cpp  HammingCoder.h  HammingCorrector.cpp  HammingCorrector.h  HammingDecoder.cpp  HammingDecoder.h  ThreeBitsCoder.cpp  ThreeBitsDecoder.cpp  ThreeBitsDecoder.h
src/Commands/: AppendCommand.cpp  AppendCommand.h  Command.hpp  ConcatenateCommand.cpp  ConcatenateCommand.h  CreateCommand.cpp  CreateCommand.h  DeleteCommand.cpp  DeleteCommand.h  ExtractCommand.cpp  ExtractCommand.h  ListCommand.cpp  ListCommand.hpp
src/Parsers/: ChainLinkParser.hpp  Parser.cpp  Parser.h
src/Parsers/ArgumentParsers/: ControlBitsParser.cpp  ControlBitsParser.h  FileNameParser.h  MergedArchivesNameParser.cpp  MergedArchivesNameParser.h
src/Parsers/OptionParsers/: ArchiveNameParser.cpp  ArchiveNameParser.h  CommandChainLinkParser.hpp  CommandParser.h  CommandsParser.cpp  CommandsParser.h
